[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/img/background/Background/Sky(1.1).png" type="Texture" id=2]
[ext_resource path="res://src/ButtonChangeScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Sawarabi_Mincho/SawarabiMincho-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 5 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.378418
margin_bottom = -0.378418
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.52002
margin_top = -2.99658
margin_right = 2.52002
margin_bottom = -2.99658
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1728.0
margin_bottom = 972.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1728.0
margin_bottom = 139.0
size_flags_vertical = 1
text = "Miko Exchange!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 1728.0
margin_bottom = 186.0
size_flags_vertical = 3

[node name="ButtonStart" parent="MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 218.0
margin_right = 1728.0
margin_bottom = 357.0
focus_neighbour_bottom = NodePath("../ButtonSkipIntro")
size_flags_vertical = 1
path = "res://src/scenes/CutScene.tscn"

[node name="ButtonSkipIntro" parent="MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 389.0
margin_right = 1728.0
margin_bottom = 528.0
focus_neighbour_top = NodePath("../ButtonStart")
focus_neighbour_bottom = NodePath("../HBoxContainer/ButtonSound")
size_flags_vertical = 1
text = "Skip Intro"
path = "res://src/scenes/GameScene.tscn"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 560.0
margin_right = 1728.0
margin_bottom = 699.0
custom_constants/separation = 32
alignment = 1

[node name="ButtonSound" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 554.0
margin_bottom = 139.0
focus_neighbour_top = NodePath("../../ButtonSkipIntro")
focus_neighbour_right = NodePath("../ButtonMusic")
focus_neighbour_bottom = NodePath("../../ButtonExit")
mouse_filter = 2
size_flags_horizontal = 3
text = "SE: On"

[node name="ButtonMusic" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 586.0
margin_right = 1140.0
margin_bottom = 139.0
focus_neighbour_left = NodePath("../ButtonSound")
focus_neighbour_top = NodePath("../../ButtonSkipIntro")
focus_neighbour_right = NodePath("../ButtonLanguage")
focus_neighbour_bottom = NodePath("../../ButtonExit")
mouse_filter = 2
size_flags_horizontal = 3
text = "BGM: On"

[node name="ButtonLanguage" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1172.0
margin_right = 1728.0
margin_bottom = 139.0
focus_neighbour_left = NodePath("../ButtonMusic")
focus_neighbour_top = NodePath("../../ButtonSkipIntro")
focus_neighbour_bottom = NodePath("../../ButtonExit")
size_flags_horizontal = 3
text = "日本語"

[node name="ButtonExit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 731.0
margin_right = 1728.0
margin_bottom = 870.0
focus_neighbour_top = NodePath("../HBoxContainer/ButtonSound")
mouse_filter = 2
text = "Exit"

[node name="Credits" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 902.0
margin_right = 1728.0
margin_bottom = 972.0
alignment = 1

[node name="LabelGame" type="Label" parent="MarginContainer/VBoxContainer/Credits"]
margin_right = 584.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "Game by EasternMouse"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Credits"]
margin_left = 588.0
margin_right = 1511.0
margin_bottom = 70.0
size_flags_horizontal = 3

[node name="LabelMusic" type="Label" parent="MarginContainer/VBoxContainer/Credits"]
margin_left = 1515.0
margin_right = 1728.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "no music"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonSound" to="." method="_on_ButtonSound_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonMusic" to="." method="_on_ButtonMusic_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonLanguage" to="." method="_on_ButtonLanguage_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
